--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "taskappmanager": "file:.."
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
