--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development nodemon ./backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "npx cross-env NODE_ENV=production node backend/server.js"
-  },
+ "scripts": {
+  "dev": "nodemon backend/server.js",
+  "start": "node backend/server.js"
+  
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
